# python-wopeditor

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  requirements.txt  search.html  setup.cfg  setup.py  winpkg.sh  wopeditor.bat  wopeditor.nsi  wopeditor.py  wopeditor.sh  wopeditor.spec
doc/: words.md
docs/: README.md  core_symbols.md  core_symbols_challenge.md  install.md  intro.md  spells.mm.md
install/: index.html
search/: search_index.json
wopeditor/: __main__.py  platform.py  wopeditor.kv  wopeditor.py  woplang.py  wopmods.py
wopeditor/screens/: abc.kv  abc.py  abcs.kv  abcs.py  calibrate.py  drawing.kv  drawing.py  model.py  newdrawing.kv  newdrawing.py  symbol.kv  symbol.py  testabc.py
wopeditor/texnomagic/: abc.py  abcs.py  common.py  drawing.py  lang.py  model.py  symbol.py
wopeditor/widgets/: drawingarea.py  drawingpreview.py  errorpopup.py  focusbutton.py  header.py  labeledtextinput.py  modelpreview.py  nicescrollview.py  sidebar.py
