[metadata]
name = wopeditor
author = texnoforge
author_email = voice@texnoforge.dev
description = Words of Power Editor of TexnoMagic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/texnoforge/python-wopeditor/
project_urls =
    Docs = https://texnoforge.github.io/python-wopeditor/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    kivy
    texnomagic
    trio

[options.entry_points]
console_scripts =
    wopeditor = wopeditor.wopeditor:run_app
    woplang = wopeditor.woplang:main
